hphp/hack/test/typecheck/new_inference/nothing/shape.php.like_types.exp
File "shape.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
File "shape.php", line 4, characters 55-71:
Expected ~shape('x' => ~int) because it is an unenforceable type
File "shape.php", line 4, characters 15-48:
But got shape('x' => ~int, ?'y' => dynamic)
